[package]
name = "rustc_kernel_codegen"
version = "0.0.0"
edition = "2021"

[features]
# By default, the use-compiled-tools is enabled, as doesn't require additional
# setup steps for the user. This does however mean that you will need to disable
# default features and explicitly enable `use-installed-tools` if you are using
# this in an environment with spirv-tools in PATH, and you don't want to take
# the compile time cost
default = ["use-installed-tools"]

# If enabled, uses spirv-tools binaries installed in PATH, instead of
# compiling and linking the spirv-tools C++ code
use-installed-tools = ["spirv-tools/use-installed-tools"]

# If enabled will compile and link the C++ code for the spirv tools, the compiled
# version is preferred if both this and `use-installed-tools` are enabled
use-compiled-tools = ["spirv-tools/use-compiled-tools"]

[dependencies]
rustc_middle = { path = "../rustc_middle" }
rustc_span = { path = "../rustc_span" }
rustc_session = { path = "../rustc_session" }
rustc_codegen_ssa = { path = "../rustc_codegen_ssa" }
rustc_hir = { path = "../rustc_hir" }
rustc_mir_build = { path = "../rustc_mir_build" }
rustc_ast = { path = "../rustc_ast" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_target = { path = "../rustc_target" }
rustc_index = { path = "../rustc_index" }
rustc_arena = { path = "../rustc_arena" }
rustc_errors = { path = "../rustc_errors" }
rustc_apfloat = "0.2"

tracing = "0.1"

rspirv = "0.11"
indexmap = "1.6.0"
num-traits = "0.2.15"
spirv-tools = { version = "0.10", default-features = false }
smallvec = "1.6.1"